<resources>
    <string name="app_name">Swoosh</string>
    <string name="leage_background">Leage Background</string>
    <string name="logo">logo</string>
    <string name="desire_league">Desire League</string>
    <string name="mens">MENS</string>
    <string name="womens">WOMENS</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">NEXT</string>
    <string name="welcomebackground">welcomebackground</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="skill_background">skill background</string>
    <string name="i_am_a">I am a</string>
    <string name="beginner">Beginner</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">looking for a co-ed beginner league near you..</string>
    <string name="finish_background">finish_background</string>
</resources>
